读取json匹配条件,按字节匹配报文

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,9 @@ SET(SRCS
     ${PREFIX}/src/base/Logger.cpp
     ${PREFIX}/src/base/File.cpp
     ${PREFIX}/src/base/local_time.cpp
-    ${PREFIX}/src/pcap/PcapParse.cpp
     ${PREFIX}/src/GlobalValue.cpp
+    ${PREFIX}/src/pcap/PcapParse.cpp
+    ${PREFIX}/src/pcap/FilterCondition.cpp
 )
 
 SET(SRCS ${SRCS}
