--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8) #设置cmake最低版本
 project("idump" CXX)	#设置项目名称
 SET(PREFIX ${CMAKE_CURRENT_SOURCE_DIR})#设置普通变量，CMAKE_CURRENT_SOURCE_DIR为当前cmake文件目录
-SET(BINDIR ${PREFIX})
+SET(BINDIR /usr/bin)
 message (">>> pwd = ${PREFIX}")#打印变量
 
 if(UBUSYS)
@@ -59,5 +59,6 @@ ADD_EXECUTABLE(${RUN_MAIN} ${SRCS})
 
 TARGET_LINK_LIBRARIES(${RUN_MAIN} ${LIB_SO})#添加依赖库
 
+
 # 安装可执行文件到指定位置，并指定权限
-# INSTALL(TARGETS ${RUN_MAIN} DESTINATION ${BINDIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE WORLD_EXECUTE)
+INSTALL(TARGETS ${RUN_MAIN} DESTINATION ${BINDIR} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE WORLD_EXECUTE)
